microservices/users-crud-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-crud-service
spec:
  selector:
    app: users-crud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
